--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Babel==2.5.3
 certifi==2018.1.18
 chardet==3.0.4
 defusedxml==0.5.0
@@ -5,8 +6,10 @@ Django==2.0.1
 django-allauth==0.34.0
 django-debug-toolbar==1.9.1
 django-environ==0.4.4
+django-phonenumber-field==2.0.0
 idna==2.6
 oauthlib==2.0.6
+phonenumberslite==8.8.11
 psycopg2==2.7.3.2
 python3-openid==3.1.0
 pytz==2017.3
