--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==2.0.1
 django-allauth==0.34.0
 django-debug-toolbar==1.9.1
 django-environ==0.4.4
+django-extensions==2.0.0
 django-phonenumber-field==2.0.0
 idna==2.6
 oauthlib==2.0.6
@@ -17,4 +18,5 @@ requests==2.18.4
 requests-oauthlib==0.8.0
 six==1.11.0
 sqlparse==0.2.4
+typing==3.6.4
 urllib3==1.22
